k8s/hello-ingress.yaml
# kubectl create deployment web2 --image=gcr.io/google-samples/hello-app:2.0
# kubectl expose deployment web2 --port=8080 --type=NodePort
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
