k8s/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hnjobs-server
  labels:
    app: hnjobs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hnjobs-server
  template:
    metadata:
      labels:
        app: hnjobs-server
    spec:
      containers:
        - name: hnjobs-server
          image: hnjobs-server
          ports:
            - containerPort: 12345
...
---
apiVersion: v1
kind: Service
metadata:
  name: hnjobs-server-grpc
spec:
  ports:
  - protocol: TCP
    port: 12345
    targetPort: 12345
  type: NodePort
  selector:
    app: hnjobs-server
...
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hnjobs-server-ingress-grpc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - grpc.example.com
  #   secretName: grpc-secret
  rules:
  - host: grpc.example.com
    http:
      paths:
      - path: /hnjobs.Import
        pathType: Prefix
        backend:
          service:
            name: hnjobs-server-grpc
            port:
              number: 12345
      - path: /grpc.reflection.v1alpha.ServerReflection
        pathType: Prefix
        backend:
          service:
            name: hnjobs-server-grpc
            port:
              number: 12345
...
